# wolfi

./: CMakeLists.txt  Makefile  README.md  Untitled Diagram.drawio  cub3d.h  ft_map_parser.c  ft_parse_legend.c  ft_parse_legend_utils.c  ft_parse_legend_utils2.c  ft_parse_legend_utils3.c  ft_trgb_manage.c  libft.h  main.c  main_rev1.c  main_rev2.c  main_rev3.c  main_rev4.c  main_rev5.c  main_rev6.c  map.cub
etc/: exit.c  init_params.c  init_txt.c  keys.c
inc/: cub3d.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putuintmax_fd.c  ft_putwchar_fd.c  ft_putwstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  (+12 more)
parser/: ft_leg_init.c  ft_map_parser.c  ft_parse_legend.c  ft_parse_legend_utils.c  ft_parse_legend_utils2.c  ft_parse_legend_utils3.c
render/: bitmap.c  draw_utils.c  ft_draw_sprites.c  ft_draw_walls.c  ft_draw_walls2.c  sprite_utils.c
txtrs/: BAR.xpm  WALL2.xpm  WALL33.xpm  WALL63.xpm  WALL75.xpm
